--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -5,11 +5,16 @@
       - apt-transport-https
       - apt-utils
       - curl
+      - git
       - gnupg
       - htop
       - unzip
       - xz-utils
     state: present
+    update_cache: true
+
+- name: Update apt cache
+  apt:
     update_cache: true
 
 - name: Download e install zabbix repositories
@@ -26,6 +31,17 @@
       - zabbix-agent
     state: present
     update_cache: true
+  when: zabbix_server_version is version('4.3', '>') # check 4.3
+
+- name: Install zabbix-server
+  apt:
+    name:
+      - zabbix-server-{{ db_engine }}
+      - zabbix-frontend-php
+      - zabbix-agent
+    state: present
+    update_cache: true
+  when: zabbix_server_version is version('4.3', '<=') # check 4.3
 
 - name: Install php-pgsql package
   apt:
