--- a/templates/apache.conf
+++ b/templates/apache.conf
@@ -16,7 +16,7 @@
         php_value upload_max_filesize 2M
         php_value max_input_time 300
         php_value always_populate_raw_post_data -1
-        php_value date.timezone {{ ZBX_TIMEZONE }}
+        php_value date.timezone {{ zabbix_timezone }}
     </IfModule>
     <IfModule mod_php7.c>
         php_value max_execution_time 300
@@ -25,7 +25,7 @@
         php_value upload_max_filesize 2M
         php_value max_input_time 300
         php_value always_populate_raw_post_data -1
-        php_value date.timezone {{ ZBX_TIMEZONE }}
+        php_value date.timezone {{ zabbix_timezone }}
     </IfModule>
 </Directory>
 
