--- a/templates/zabbix_server.conf
+++ b/templates/zabbix_server.conf
@@ -98,7 +98,7 @@ SocketDir=/var/run/zabbix
 # Default:
 # DBName=
 
-DBName={{db_name}}
+DBName={{ db_name }}
 
 ### Option: DBSchema
 #	Schema name. Used for IBM DB2 and PostgreSQL.
@@ -114,7 +114,7 @@ DBName={{db_name}}
 # Default:
 # DBUser=
 
-DBUser={{db_user}}
+DBUser={{ db_user }}
 
 ### Option: DBPassword
 #	Database password. Ignored for SQLite.
@@ -122,7 +122,7 @@ DBUser={{db_user}}
 #
 # Mandatory: no
 # Default:
-DBPassword={{db_password}}
+DBPassword={{ db_password }}
 
 ### Option: DBSocket
 #	Path to MySQL socket.
@@ -161,7 +161,7 @@ DBPassword={{db_password}}
 # Mandatory: no
 # Range: 0-1000
 # Default:
-StartPollers={{START_POLLERS}}
+StartPollers={{zabbix_start_pollers}}
 
 ### Option: StartIPMIPollers
 #	Number of pre-forked instances of IPMI pollers.
