--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,2 +1,2 @@
 ---
-zabbix_repo_url: https://repo.zabbix.com/zabbix/{{ zabbix_server_major_version }}/rhel/{{ ansible_distribution_major_version }}/x86_64/zabbix-release-{{ zabbix_server_major_version }}-{{ zabbix_server_minor_version }}.el{{ ansible_distribution_major_version }}.noarch.rpm
+zabbix_repo_url: https://repo.zabbix.com/zabbix/{{ zabbix_server_version }}/rhel/{{ ansible_distribution_major_version }}/x86_64/zabbix-release-{{zabbix_server_version}}-{{ zabbix_server_minor_version }}.el{{ ansible_distribution_major_version }}.noarch.rpm
