--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,2 +1,2 @@
 ---
-zabbix_repo_url: https://repo.zabbix.com/zabbix/{{zabbix_server_major_version}}/{{ansible_distribution|lower}}/pool/main/z/zabbix-release/zabbix-release_{{zabbix_server_major_version}}-1+{{ansible_distribution_release}}_all.deb
+zabbix_repo_url: https://repo.zabbix.com/zabbix/{{zabbix_server_version}}/{{ansible_distribution|lower}}/pool/main/z/zabbix-release/zabbix-release_{{zabbix_server_version}}-{{zabbix_server_minor_version}}+{{ansible_distribution_release}}_all.deb
