--- a/vars/Raspbian.yml
+++ b/vars/Raspbian.yml
@@ -1,2 +1,4 @@
 ---
-zabbix_repo_url: https://repo.zabbix.com/zabbix/{{zabbix_server_major_version}}/raspbian/pool/main/z/zabbix-release/zabbix-release_{{zabbix_server_major_version}}-1+{{ansible_distribution_release}}_all.deb
+zabbix_repo_url: https://repo.zabbix.com/zabbix/{{zabbix_server_version}}/raspbian/pool/main/z/zabbix-release/zabbix-release_{{zabbix_server_version}}-{{zabbix_server_minor_version}}+{{ansible_distribution_release}}_all.deb
+
+# change raspbian by some variable that makes reference to it {{ansible_distribution|lower}}
